packages/forge-dsl/fixtures/errors/e27-bad-include-directive.fable
// expect: FORGE110
INCLUDE

-> go
=== go ===
Onward.
-> END
